// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`mays 2024 men processResults full event snapshot 1`] = `
{
  "back": [
    [
      1,
      0,
      2,
      3,
      4,
      6,
      5,
      7,
      8,
      9,
      11,
      10,
      13,
      12,
      15,
      14,
      17,
      16,
      19,
      18,
      20,
      22,
      21,
      24,
      23,
      25,
      27,
      26,
      28,
      30,
      29,
      32,
      31,
      34,
      33,
      36,
      35,
      38,
      37,
      40,
      39,
      42,
      41,
      44,
      43,
      46,
      45,
      47,
      48,
      50,
      49,
      51,
      53,
      52,
      55,
      54,
      56,
      57,
      59,
      58,
      63,
      62,
      61,
      60,
      64,
      66,
      65,
      69,
      67,
      68,
      70,
      71,
      72,
      74,
      73,
      75,
      76,
    ],
    [
      0,
      1,
      2,
      3,
      5,
      4,
      6,
      7,
      8,
      10,
      9,
      12,
      11,
      13,
      14,
      16,
      15,
      18,
      17,
      19,
      21,
      20,
      23,
      22,
      24,
      25,
      26,
      28,
      27,
      29,
      30,
      31,
      33,
      32,
      35,
      34,
      37,
      36,
      39,
      38,
      41,
      40,
      42,
      43,
      45,
      44,
      47,
      46,
      49,
      48,
      52,
      50,
      51,
      54,
      53,
      55,
      57,
      56,
      58,
      60,
      59,
      61,
      65,
      64,
      63,
      62,
      67,
      66,
      68,
      70,
      69,
      71,
      73,
      72,
      75,
      74,
      76,
    ],
    [
      0,
      1,
      2,
      4,
      3,
      5,
      6,
      8,
      7,
      9,
      11,
      10,
      13,
      12,
      15,
      14,
      17,
      16,
      18,
      20,
      19,
      22,
      21,
      23,
      24,
      25,
      26,
      27,
      29,
      28,
      30,
      32,
      31,
      33,
      34,
      35,
      36,
      38,
      37,
      40,
      39,
      44,
      43,
      42,
      41,
      46,
      45,
      47,
      48,
      50,
      49,
      52,
      51,
      53,
      54,
      56,
      55,
      57,
      59,
      58,
      60,
      62,
      61,
      63,
      64,
      66,
      65,
      69,
      67,
      68,
      71,
      70,
      72,
      73,
      74,
      76,
      75,
    ],
    [
      0,
      2,
      1,
      3,
      4,
      5,
      7,
      6,
      9,
      8,
      10,
      12,
      11,
      14,
      13,
      16,
      15,
      18,
      17,
      19,
      21,
      20,
      22,
      23,
      24,
      26,
      25,
      28,
      27,
      30,
      29,
      31,
      32,
      33,
      34,
      35,
      37,
      36,
      39,
      38,
      41,
      40,
      42,
      43,
      45,
      44,
      47,
      46,
      49,
      48,
      50,
      51,
      53,
      52,
      55,
      54,
      57,
      56,
      58,
      59,
      61,
      60,
      63,
      62,
      65,
      64,
      67,
      66,
      69,
      68,
      70,
      72,
      71,
      73,
      74,
      76,
      75,
    ],
  ],
  "completed": [
    [
      true,
      true,
      true,
      true,
      true,
    ],
    [
      true,
      true,
      true,
      true,
      true,
    ],
    [
      true,
      true,
      true,
      true,
      true,
    ],
    [
      true,
      true,
      true,
      true,
      true,
    ],
  ],
  "crews": [
    {
      "blades": false,
      "club": "Caius",
      "club_end": "LMBC",
      "end": "LMBC",
      "gain": -2,
      "highlight": false,
      "num_name": "Caius I",
      "number": 1,
      "start": "Caius",
      "withdrawn": false,
    },
    {
      "blades": true,
      "club": "LMBC",
      "club_end": "Magdalene",
      "end": "Magdalene",
      "gain": 1,
      "highlight": false,
      "num_name": "LMBC I",
      "number": 1,
      "start": "LMBC",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Magdalene",
      "club_end": "Caius",
      "end": "Caius",
      "gain": 1,
      "highlight": false,
      "num_name": "Magdalene I",
      "number": 1,
      "start": "Magdalene",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "King's",
      "club_end": "Jesus",
      "end": "Jesus",
      "gain": -1,
      "highlight": false,
      "num_name": "King's I",
      "number": 1,
      "start": "King's",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Emmanuel",
      "club_end": "King's",
      "end": "King's",
      "gain": -1,
      "highlight": false,
      "num_name": "Emmanuel I",
      "number": 1,
      "start": "Emmanuel",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Pembroke",
      "club_end": "Emmanuel",
      "end": "Emmanuel",
      "gain": -2,
      "highlight": false,
      "num_name": "Pembroke I",
      "number": 1,
      "start": "Pembroke",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Jesus",
      "club_end": "Downing",
      "end": "Downing",
      "gain": 3,
      "highlight": false,
      "num_name": "Jesus I",
      "number": 1,
      "start": "Jesus",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Peterhouse",
      "club_end": "Pembroke",
      "end": "Pembroke",
      "gain": -2,
      "highlight": false,
      "num_name": "Peterhouse I",
      "number": 1,
      "start": "Peterhouse",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Downing",
      "club_end": "St Catharine's",
      "end": "St Catharine's",
      "gain": 2,
      "highlight": false,
      "num_name": "Downing I",
      "number": 1,
      "start": "Downing",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Clare",
      "club_end": "Peterhouse",
      "end": "Peterhouse",
      "gain": -3,
      "highlight": false,
      "num_name": "Clare I",
      "number": 1,
      "start": "Clare",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Queens'",
      "club_end": "Selwyn",
      "end": "Selwyn",
      "gain": -4,
      "highlight": false,
      "num_name": "Queens' I",
      "number": 1,
      "start": "Queens'",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "St Catharine's",
      "club_end": "LMBC",
      "end": "LMBC II",
      "gain": 3,
      "highlight": false,
      "num_name": "St Catharine's I",
      "number": 1,
      "start": "St Catharine's",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "LMBC",
      "club_end": "Clare",
      "end": "Clare",
      "gain": 1,
      "highlight": false,
      "num_name": "LMBC II",
      "number": 2,
      "start": "LMBC II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Selwyn",
      "club_end": "Hughes Hall",
      "end": "Hughes Hall",
      "gain": 3,
      "highlight": false,
      "num_name": "Selwyn I",
      "number": 1,
      "start": "Selwyn",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "1st and 3rd",
      "club_end": "Queens'",
      "end": "Queens'",
      "gain": -4,
      "highlight": false,
      "num_name": "1st and 3rd I",
      "number": 1,
      "start": "1st and 3rd",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Robinson",
      "club_end": "Fitzwilliam",
      "end": "Fitzwilliam",
      "gain": -1,
      "highlight": false,
      "num_name": "Robinson I",
      "number": 1,
      "start": "Robinson",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Caius",
      "club_end": "Robinson",
      "end": "Robinson",
      "gain": -1,
      "highlight": false,
      "num_name": "Caius II",
      "number": 2,
      "start": "Caius II",
      "withdrawn": false,
    },
    {
      "blades": true,
      "club": "Hughes Hall",
      "club_end": "Caius",
      "end": "Caius II",
      "gain": 4,
      "highlight": false,
      "num_name": "Hughes Hall I",
      "number": 1,
      "start": "Hughes Hall",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Trinity Hall",
      "club_end": "1st and 3rd",
      "end": "1st and 3rd",
      "gain": -3,
      "highlight": false,
      "num_name": "Trinity Hall I",
      "number": 1,
      "start": "Trinity Hall",
      "withdrawn": false,
    },
    {
      "blades": true,
      "club": "Fitzwilliam",
      "club_end": "Wolfson",
      "end": "Wolfson",
      "gain": 4,
      "highlight": false,
      "num_name": "Fitzwilliam I",
      "number": 1,
      "start": "Fitzwilliam",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Christ's",
      "club_end": "Churchill",
      "end": "Churchill",
      "gain": -2,
      "highlight": false,
      "num_name": "Christ's I",
      "number": 1,
      "start": "Christ's",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Corpus Christi",
      "club_end": "Trinity Hall",
      "end": "Trinity Hall",
      "gain": -2,
      "highlight": false,
      "num_name": "Corpus Christi I",
      "number": 1,
      "start": "Corpus Christi",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Wolfson",
      "club_end": "Christ's",
      "end": "Christ's",
      "gain": 3,
      "highlight": false,
      "num_name": "Wolfson I",
      "number": 1,
      "start": "Wolfson",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Girton",
      "club_end": "Corpus Christi",
      "end": "Corpus Christi",
      "gain": -1,
      "highlight": false,
      "num_name": "Girton I",
      "number": 1,
      "start": "Girton",
      "withdrawn": false,
    },
    {
      "blades": true,
      "club": "Churchill",
      "club_end": "Girton",
      "end": "Girton",
      "gain": 4,
      "highlight": false,
      "num_name": "Churchill I",
      "number": 1,
      "start": "Churchill",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Emmanuel",
      "club_end": "Homerton",
      "end": "Homerton",
      "gain": -1,
      "highlight": false,
      "num_name": "Emmanuel II",
      "number": 2,
      "start": "Emmanuel II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Downing",
      "club_end": "Emmanuel",
      "end": "Emmanuel II",
      "gain": -4,
      "highlight": false,
      "num_name": "Downing II",
      "number": 2,
      "start": "Downing II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Homerton",
      "club_end": "Jesus",
      "end": "Jesus II",
      "gain": 2,
      "highlight": false,
      "num_name": "Homerton I",
      "number": 1,
      "start": "Homerton",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Pembroke",
      "club_end": "Pembroke",
      "end": "Pembroke II",
      "gain": 0,
      "highlight": false,
      "num_name": "Pembroke II",
      "number": 2,
      "start": "Pembroke II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "1st and 3rd",
      "club_end": "1st and 3rd",
      "end": "1st and 3rd II",
      "gain": 0,
      "highlight": false,
      "num_name": "1st and 3rd II",
      "number": 2,
      "start": "1st and 3rd II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Jesus",
      "club_end": "Downing",
      "end": "Downing II",
      "gain": 3,
      "highlight": false,
      "num_name": "Jesus II",
      "number": 2,
      "start": "Jesus II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "St Edmund's",
      "club_end": "Sidney Sussex",
      "end": "Sidney Sussex",
      "gain": -2,
      "highlight": false,
      "num_name": "St Edmund's I",
      "number": 1,
      "start": "St Edmund's",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "St Catharine's",
      "club_end": "St Catharine's",
      "end": "St Catharine's II",
      "gain": 0,
      "highlight": false,
      "num_name": "St Catharine's II",
      "number": 2,
      "start": "St Catharine's II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Clare",
      "club_end": "St Edmund's",
      "end": "St Edmund's",
      "gain": -2,
      "highlight": false,
      "num_name": "Clare II",
      "number": 2,
      "start": "Clare II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Sidney Sussex",
      "club_end": "Magdalene",
      "end": "Magdalene II",
      "gain": 3,
      "highlight": false,
      "num_name": "Sidney Sussex I",
      "number": 1,
      "start": "Sidney Sussex",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Darwin",
      "club_end": "Clare",
      "end": "Clare II",
      "gain": -4,
      "highlight": false,
      "num_name": "Darwin I",
      "number": 1,
      "start": "Darwin",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Magdalene",
      "club_end": "Clare Hall",
      "end": "Clare Hall",
      "gain": 2,
      "highlight": false,
      "num_name": "Magdalene II",
      "number": 2,
      "start": "Magdalene II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Queens'",
      "club_end": "Emmanuel",
      "end": "Emmanuel III",
      "gain": -4,
      "highlight": false,
      "num_name": "Queens' II",
      "number": 2,
      "start": "Queens' II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Emmanuel",
      "club_end": "Peterhouse",
      "end": "Peterhouse II",
      "gain": 1,
      "highlight": false,
      "num_name": "Emmanuel III",
      "number": 3,
      "start": "Emmanuel III",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Trinity Hall",
      "club_end": "Darwin",
      "end": "Darwin",
      "gain": -6,
      "highlight": false,
      "num_name": "Trinity Hall II",
      "number": 2,
      "start": "Trinity Hall II",
      "withdrawn": false,
    },
    {
      "blades": true,
      "club": "Clare Hall",
      "club_end": "Fitzwilliam",
      "end": "Fitzwilliam II",
      "gain": 4,
      "highlight": false,
      "num_name": "Clare Hall I",
      "number": 1,
      "start": "Clare Hall",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Churchill",
      "club_end": "Queens'",
      "end": "Queens' II",
      "gain": -2,
      "highlight": false,
      "num_name": "Churchill II",
      "number": 2,
      "start": "Churchill II",
      "withdrawn": false,
    },
    {
      "blades": true,
      "club": "Peterhouse",
      "club_end": "Selwyn",
      "end": "Selwyn II",
      "gain": 4,
      "highlight": false,
      "num_name": "Peterhouse II",
      "number": 2,
      "start": "Peterhouse II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Robinson",
      "club_end": "Churchill",
      "end": "Churchill II",
      "gain": -4,
      "highlight": false,
      "num_name": "Robinson II",
      "number": 2,
      "start": "Robinson II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Selwyn",
      "club_end": "Jesus",
      "end": "Jesus III",
      "gain": 2,
      "highlight": false,
      "num_name": "Selwyn II",
      "number": 2,
      "start": "Selwyn II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Christ's",
      "club_end": "Trinity Hall",
      "end": "Trinity Hall II",
      "gain": -1,
      "highlight": false,
      "num_name": "Christ's II",
      "number": 2,
      "start": "Christ's II",
      "withdrawn": false,
    },
    {
      "blades": true,
      "club": "Fitzwilliam",
      "club_end": "Christ's",
      "end": "Christ's II",
      "gain": 6,
      "highlight": false,
      "num_name": "Fitzwilliam II",
      "number": 2,
      "start": "Fitzwilliam II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Jesus",
      "club_end": "Robinson",
      "end": "Robinson II",
      "gain": 3,
      "highlight": false,
      "num_name": "Jesus III",
      "number": 3,
      "start": "Jesus III",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "LMBC",
      "club_end": "Lucy Cavendish",
      "end": "Lucy Cavendish",
      "gain": -2,
      "highlight": false,
      "num_name": "LMBC III",
      "number": 3,
      "start": "LMBC III",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "King's",
      "club_end": "Caius",
      "end": "Caius III",
      "gain": -4,
      "highlight": false,
      "num_name": "King's II",
      "number": 2,
      "start": "King's II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Caius",
      "club_end": "LMBC",
      "end": "LMBC III",
      "gain": 1,
      "highlight": false,
      "num_name": "Caius III",
      "number": 3,
      "start": "Caius III",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Corpus Christi",
      "club_end": "Corpus Christi",
      "end": "Corpus Christi II",
      "gain": 0,
      "highlight": false,
      "num_name": "Corpus Christi II",
      "number": 2,
      "start": "Corpus Christi II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Hughes Hall",
      "club_end": "Wolfson",
      "end": "Wolfson II",
      "gain": -3,
      "highlight": false,
      "num_name": "Hughes Hall II",
      "number": 2,
      "start": "Hughes Hall II",
      "withdrawn": false,
    },
    {
      "blades": true,
      "club": "Lucy Cavendish",
      "club_end": "King's",
      "end": "King's II",
      "gain": 5,
      "highlight": false,
      "num_name": "Lucy Cavendish I",
      "number": 1,
      "start": "Lucy Cavendish",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "1st and 3rd",
      "club_end": "Girton",
      "end": "Girton II",
      "gain": -3,
      "highlight": false,
      "num_name": "1st and 3rd III",
      "number": 3,
      "start": "1st and 3rd III",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Wolfson",
      "club_end": "Hughes Hall",
      "end": "Hughes Hall II",
      "gain": 3,
      "highlight": false,
      "num_name": "Wolfson II",
      "number": 2,
      "start": "Wolfson II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Pembroke",
      "club_end": "Pembroke",
      "end": "Pembroke III",
      "gain": 0,
      "highlight": false,
      "num_name": "Pembroke III",
      "number": 3,
      "start": "Pembroke III",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Girton",
      "club_end": "1st and 3rd",
      "end": "1st and 3rd III",
      "gain": 3,
      "highlight": false,
      "num_name": "Girton II",
      "number": 2,
      "start": "Girton II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Magdalene",
      "club_end": "Jesus",
      "end": "Jesus IV",
      "gain": -3,
      "highlight": false,
      "num_name": "Magdalene III",
      "number": 3,
      "start": "Magdalene III",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Sidney Sussex",
      "club_end": "Sidney Sussex",
      "end": "Sidney Sussex II",
      "gain": 0,
      "highlight": false,
      "num_name": "Sidney Sussex II",
      "number": 2,
      "start": "Sidney Sussex II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Clare",
      "club_end": "St Catharine's",
      "end": "St Catharine's III",
      "gain": -5,
      "highlight": false,
      "num_name": "Clare III",
      "number": 3,
      "start": "Clare III",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Darwin",
      "club_end": "Magdalene",
      "end": "Magdalene III",
      "gain": -6,
      "highlight": false,
      "num_name": "Darwin II",
      "number": 2,
      "start": "Darwin II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Churchill",
      "club_end": "Emmanuel",
      "end": "Emmanuel IV",
      "gain": -1,
      "highlight": false,
      "num_name": "Churchill III",
      "number": 3,
      "start": "Churchill III",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Jesus",
      "club_end": "Churchill",
      "end": "Churchill III",
      "gain": 5,
      "highlight": false,
      "num_name": "Jesus IV",
      "number": 4,
      "start": "Jesus IV",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Emmanuel",
      "club_end": "Lucy Cavendish",
      "end": "Lucy Cavendish II",
      "gain": 2,
      "highlight": false,
      "num_name": "Emmanuel IV",
      "number": 4,
      "start": "Emmanuel IV",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "LMBC",
      "club_end": "Clare",
      "end": "Clare III",
      "gain": -4,
      "highlight": false,
      "num_name": "LMBC IV",
      "number": 4,
      "start": "LMBC IV",
      "withdrawn": false,
    },
    {
      "blades": true,
      "club": "St Catharine's",
      "club_end": "LMBC",
      "end": "LMBC V",
      "gain": 6,
      "highlight": false,
      "num_name": "St Catharine's III",
      "number": 3,
      "start": "St Catharine's III",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Fitzwilliam",
      "club_end": "Darwin",
      "end": "Darwin II",
      "gain": -1,
      "highlight": false,
      "num_name": "Fitzwilliam III",
      "number": 3,
      "start": "Fitzwilliam III",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Magdalene",
      "club_end": "Fitzwilliam",
      "end": "Fitzwilliam III",
      "gain": -4,
      "highlight": false,
      "num_name": "Magdalene IV",
      "number": 4,
      "start": "Magdalene IV",
      "withdrawn": false,
    },
    {
      "blades": true,
      "club": "Lucy Cavendish",
      "club_end": "LMBC",
      "end": "LMBC IV",
      "gain": 5,
      "highlight": false,
      "num_name": "Lucy Cavendish II",
      "number": 2,
      "start": "Lucy Cavendish II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "LMBC",
      "club_end": "Downing",
      "end": "Downing III",
      "gain": 4,
      "highlight": false,
      "num_name": "LMBC V",
      "number": 5,
      "start": "LMBC V",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Downing",
      "club_end": "Selwyn",
      "end": "Selwyn III",
      "gain": 1,
      "highlight": false,
      "num_name": "Downing III",
      "number": 3,
      "start": "Downing III",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Peterhouse",
      "club_end": "Magdalene",
      "end": "Magdalene IV",
      "gain": -1,
      "highlight": false,
      "num_name": "Peterhouse III",
      "number": 3,
      "start": "Peterhouse III",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "LMBC",
      "club_end": "Peterhouse",
      "end": "Peterhouse III",
      "gain": -2,
      "highlight": false,
      "num_name": "LMBC VI",
      "number": 6,
      "start": "LMBC VI",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Selwyn",
      "club_end": "Jesus",
      "end": "Jesus V",
      "gain": 3,
      "highlight": false,
      "num_name": "Selwyn III",
      "number": 3,
      "start": "Selwyn III",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Jesus",
      "club_end": "LMBC",
      "end": "LMBC VI",
      "gain": 1,
      "highlight": false,
      "num_name": "Jesus V",
      "number": 5,
      "start": "Jesus V",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Sidney Sussex",
      "club_end": "Sidney Sussex",
      "end": "Sidney Sussex III",
      "gain": 0,
      "highlight": false,
      "num_name": "Sidney Sussex III",
      "number": 3,
      "start": "Sidney Sussex III",
      "withdrawn": false,
    },
  ],
  "crews_withdrawn": 0,
  "days": 4,
  "distance": 2500,
  "div_size": [
    [
      17,
      17,
      17,
      17,
      9,
    ],
    [
      17,
      17,
      17,
      17,
      9,
    ],
    [
      17,
      17,
      17,
      17,
      9,
    ],
    [
      17,
      17,
      17,
      17,
      9,
    ],
  ],
  "flags": [],
  "full_set": true,
  "gender": "Men",
  "move": [
    [
      -1,
      1,
      0,
      0,
      0,
      -1,
      1,
      0,
      0,
      0,
      -1,
      1,
      -1,
      1,
      -1,
      1,
      -1,
      1,
      -1,
      1,
      0,
      -1,
      1,
      -1,
      1,
      0,
      -1,
      1,
      0,
      -1,
      1,
      -1,
      1,
      -1,
      1,
      -1,
      1,
      -1,
      1,
      -1,
      1,
      -1,
      1,
      -1,
      1,
      -1,
      1,
      0,
      0,
      -1,
      1,
      0,
      -1,
      1,
      -1,
      1,
      0,
      0,
      -1,
      1,
      -3,
      -1,
      1,
      3,
      0,
      -1,
      1,
      -1,
      -1,
      2,
      0,
      0,
      0,
      -1,
      1,
      0,
      0,
    ],
    [
      0,
      0,
      0,
      0,
      -1,
      1,
      0,
      0,
      0,
      -1,
      1,
      -1,
      1,
      0,
      0,
      -1,
      1,
      -1,
      1,
      0,
      -1,
      1,
      -1,
      1,
      0,
      0,
      0,
      -1,
      1,
      0,
      0,
      0,
      -1,
      1,
      -1,
      1,
      -1,
      1,
      -1,
      1,
      -1,
      1,
      0,
      0,
      -1,
      1,
      -1,
      1,
      -1,
      1,
      -1,
      -1,
      2,
      -1,
      1,
      0,
      -1,
      1,
      0,
      -1,
      1,
      0,
      -3,
      -1,
      1,
      3,
      -1,
      1,
      0,
      -1,
      1,
      0,
      -1,
      1,
      -1,
      1,
      0,
    ],
    [
      0,
      0,
      0,
      -1,
      1,
      0,
      0,
      -1,
      1,
      0,
      -1,
      1,
      -1,
      1,
      -1,
      1,
      -1,
      1,
      0,
      -1,
      1,
      -1,
      1,
      0,
      0,
      0,
      0,
      0,
      -1,
      1,
      0,
      -1,
      1,
      0,
      0,
      0,
      0,
      -1,
      1,
      -1,
      1,
      -3,
      -1,
      1,
      3,
      -1,
      1,
      0,
      0,
      -1,
      1,
      -1,
      1,
      0,
      0,
      -1,
      1,
      0,
      -1,
      1,
      0,
      -1,
      1,
      0,
      0,
      -1,
      1,
      -1,
      -1,
      2,
      -1,
      1,
      0,
      0,
      0,
      -1,
      1,
    ],
    [
      0,
      -1,
      1,
      0,
      0,
      0,
      -1,
      1,
      -1,
      1,
      0,
      -1,
      1,
      -1,
      1,
      -1,
      1,
      -1,
      1,
      0,
      -1,
      1,
      0,
      0,
      0,
      -1,
      1,
      -1,
      1,
      -1,
      1,
      0,
      0,
      0,
      0,
      0,
      -1,
      1,
      -1,
      1,
      -1,
      1,
      0,
      0,
      -1,
      1,
      -1,
      1,
      -1,
      1,
      0,
      0,
      -1,
      1,
      -1,
      1,
      -1,
      1,
      0,
      0,
      -1,
      1,
      -1,
      1,
      -1,
      1,
      -1,
      1,
      -1,
      1,
      0,
      -1,
      1,
      0,
      0,
      -1,
      1,
    ],
  ],
  "pace": [],
  "results": [
    "rrurrru uuro3uurruur rurruuuuuur uuururuurur uuuurrrurrru",
    "ruurur ruo3urururuu uuuurruuuu rurrrurrruuru rurruurrrurrrr",
    "urrruu uurrurururru rurruo3uuurrr rrururrrrruurr uuuururrurrr",
    "urruru ruuuurruuur rruuurruuurr rrrruuurrruru ruuuruurrrur",
  ],
  "set": "May Bumps",
  "short": "Mays",
  "skip": [
    [
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
    [
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
    [
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
    [
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
  ],
  "year": "2024",
}
`;

exports[`mays 2024 men stepOn full stepOn snapshot 1`] = `
{
  "back": [
    [
      1,
      0,
      2,
      3,
      4,
      6,
      5,
      7,
      8,
      9,
      11,
      10,
      13,
      12,
      15,
      14,
      17,
      16,
      19,
      18,
      20,
      22,
      21,
      24,
      23,
      25,
      27,
      26,
      28,
      30,
      29,
      32,
      31,
      34,
      33,
      36,
      35,
      38,
      37,
      40,
      39,
      42,
      41,
      44,
      43,
      46,
      45,
      47,
      48,
      50,
      49,
      51,
      53,
      52,
      55,
      54,
      56,
      57,
      59,
      58,
      63,
      62,
      61,
      60,
      64,
      66,
      65,
      69,
      67,
      68,
      70,
      71,
      72,
      74,
      73,
      75,
      76,
    ],
    [
      0,
      1,
      2,
      3,
      5,
      4,
      6,
      7,
      8,
      10,
      9,
      12,
      11,
      13,
      14,
      16,
      15,
      18,
      17,
      19,
      21,
      20,
      23,
      22,
      24,
      25,
      26,
      28,
      27,
      29,
      30,
      31,
      33,
      32,
      35,
      34,
      37,
      36,
      39,
      38,
      41,
      40,
      42,
      43,
      45,
      44,
      47,
      46,
      49,
      48,
      52,
      50,
      51,
      54,
      53,
      55,
      57,
      56,
      58,
      60,
      59,
      61,
      65,
      64,
      63,
      62,
      67,
      66,
      68,
      70,
      69,
      71,
      73,
      72,
      75,
      74,
      76,
    ],
    [
      0,
      1,
      2,
      4,
      3,
      5,
      6,
      8,
      7,
      9,
      11,
      10,
      13,
      12,
      15,
      14,
      17,
      16,
      18,
      20,
      19,
      22,
      21,
      23,
      24,
      25,
      26,
      27,
      29,
      28,
      30,
      32,
      31,
      33,
      34,
      35,
      36,
      38,
      37,
      40,
      39,
      44,
      43,
      42,
      41,
      46,
      45,
      47,
      48,
      50,
      49,
      52,
      51,
      53,
      54,
      56,
      55,
      57,
      59,
      58,
      60,
      62,
      61,
      63,
      64,
      66,
      65,
      69,
      67,
      68,
      71,
      70,
      72,
      73,
      74,
      76,
      75,
    ],
    [
      0,
      2,
      1,
      3,
      4,
      5,
      7,
      6,
      9,
      8,
      10,
      12,
      11,
      14,
      13,
      16,
      15,
      18,
      17,
      19,
      21,
      20,
      22,
      23,
      24,
      26,
      25,
      28,
      27,
      30,
      29,
      31,
      32,
      33,
      34,
      35,
      37,
      36,
      39,
      38,
      41,
      40,
      42,
      43,
      45,
      44,
      47,
      46,
      49,
      48,
      50,
      51,
      53,
      52,
      55,
      54,
      57,
      56,
      58,
      59,
      61,
      60,
      63,
      62,
      65,
      64,
      67,
      66,
      69,
      68,
      70,
      72,
      71,
      73,
      74,
      76,
      75,
    ],
  ],
  "completed": [],
  "crews": [
    {
      "blades": false,
      "club": "LMBC",
      "club_end": "Magdalene",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "LMBC I",
      "number": 1,
      "start": "LMBC",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Magdalene",
      "club_end": "Caius",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Magdalene I",
      "number": 1,
      "start": "Magdalene",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Caius",
      "club_end": "LMBC",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Caius I",
      "number": 1,
      "start": "Caius",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Jesus",
      "club_end": "Downing",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Jesus I",
      "number": 1,
      "start": "Jesus",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "King's",
      "club_end": "Jesus",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "King's I",
      "number": 1,
      "start": "King's",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Emmanuel",
      "club_end": "King's",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Emmanuel I",
      "number": 1,
      "start": "Emmanuel",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Downing",
      "club_end": "St Catharine's",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Downing I",
      "number": 1,
      "start": "Downing",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Pembroke",
      "club_end": "Emmanuel",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Pembroke I",
      "number": 1,
      "start": "Pembroke",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "St Catharine's",
      "club_end": "LMBC",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "St Catharine's I",
      "number": 1,
      "start": "St Catharine's",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Peterhouse",
      "club_end": "Pembroke",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Peterhouse I",
      "number": 1,
      "start": "Peterhouse",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Selwyn",
      "club_end": "Hughes Hall",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Selwyn I",
      "number": 1,
      "start": "Selwyn",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "LMBC",
      "club_end": "Clare",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "LMBC II",
      "number": 2,
      "start": "LMBC II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Clare",
      "club_end": "Peterhouse",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Clare I",
      "number": 1,
      "start": "Clare",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Hughes Hall",
      "club_end": "Caius",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Hughes Hall I",
      "number": 1,
      "start": "Hughes Hall",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Queens'",
      "club_end": "Selwyn",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Queens' I",
      "number": 1,
      "start": "Queens'",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Fitzwilliam",
      "club_end": "Wolfson",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Fitzwilliam I",
      "number": 1,
      "start": "Fitzwilliam",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Robinson",
      "club_end": "Fitzwilliam",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Robinson I",
      "number": 1,
      "start": "Robinson",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Caius",
      "club_end": "Robinson",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Caius II",
      "number": 2,
      "start": "Caius II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "1st and 3rd",
      "club_end": "Queens'",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "1st and 3rd I",
      "number": 1,
      "start": "1st and 3rd",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Wolfson",
      "club_end": "Christ's",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Wolfson I",
      "number": 1,
      "start": "Wolfson",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Churchill",
      "club_end": "Girton",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Churchill I",
      "number": 1,
      "start": "Churchill",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Trinity Hall",
      "club_end": "1st and 3rd",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Trinity Hall I",
      "number": 1,
      "start": "Trinity Hall",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Christ's",
      "club_end": "Churchill",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Christ's I",
      "number": 1,
      "start": "Christ's",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Corpus Christi",
      "club_end": "Trinity Hall",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Corpus Christi I",
      "number": 1,
      "start": "Corpus Christi",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Girton",
      "club_end": "Corpus Christi",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Girton I",
      "number": 1,
      "start": "Girton",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Homerton",
      "club_end": "Jesus",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Homerton I",
      "number": 1,
      "start": "Homerton",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Emmanuel",
      "club_end": "Homerton",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Emmanuel II",
      "number": 2,
      "start": "Emmanuel II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Jesus",
      "club_end": "Downing",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Jesus II",
      "number": 2,
      "start": "Jesus II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Pembroke",
      "club_end": "Pembroke",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Pembroke II",
      "number": 2,
      "start": "Pembroke II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "1st and 3rd",
      "club_end": "1st and 3rd",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "1st and 3rd II",
      "number": 2,
      "start": "1st and 3rd II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Downing",
      "club_end": "Emmanuel",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Downing II",
      "number": 2,
      "start": "Downing II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Sidney Sussex",
      "club_end": "Magdalene",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Sidney Sussex I",
      "number": 1,
      "start": "Sidney Sussex",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "St Catharine's",
      "club_end": "St Catharine's",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "St Catharine's II",
      "number": 2,
      "start": "St Catharine's II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "St Edmund's",
      "club_end": "Sidney Sussex",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "St Edmund's I",
      "number": 1,
      "start": "St Edmund's",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Magdalene",
      "club_end": "Clare Hall",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Magdalene II",
      "number": 2,
      "start": "Magdalene II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Clare",
      "club_end": "St Edmund's",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Clare II",
      "number": 2,
      "start": "Clare II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Clare Hall",
      "club_end": "Fitzwilliam",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Clare Hall I",
      "number": 1,
      "start": "Clare Hall",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Emmanuel",
      "club_end": "Peterhouse",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Emmanuel III",
      "number": 3,
      "start": "Emmanuel III",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Peterhouse",
      "club_end": "Selwyn",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Peterhouse II",
      "number": 2,
      "start": "Peterhouse II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Darwin",
      "club_end": "Clare",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Darwin I",
      "number": 1,
      "start": "Darwin",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Fitzwilliam",
      "club_end": "Christ's",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Fitzwilliam II",
      "number": 2,
      "start": "Fitzwilliam II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Queens'",
      "club_end": "Emmanuel",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Queens' II",
      "number": 2,
      "start": "Queens' II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Selwyn",
      "club_end": "Jesus",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Selwyn II",
      "number": 2,
      "start": "Selwyn II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Churchill",
      "club_end": "Queens'",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Churchill II",
      "number": 2,
      "start": "Churchill II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Jesus",
      "club_end": "Robinson",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Jesus III",
      "number": 3,
      "start": "Jesus III",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Trinity Hall",
      "club_end": "Darwin",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Trinity Hall II",
      "number": 2,
      "start": "Trinity Hall II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Christ's",
      "club_end": "Trinity Hall",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Christ's II",
      "number": 2,
      "start": "Christ's II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Robinson",
      "club_end": "Churchill",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Robinson II",
      "number": 2,
      "start": "Robinson II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Lucy Cavendish",
      "club_end": "King's",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Lucy Cavendish I",
      "number": 1,
      "start": "Lucy Cavendish",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Caius",
      "club_end": "LMBC",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Caius III",
      "number": 3,
      "start": "Caius III",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "LMBC",
      "club_end": "Lucy Cavendish",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "LMBC III",
      "number": 3,
      "start": "LMBC III",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Corpus Christi",
      "club_end": "Corpus Christi",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Corpus Christi II",
      "number": 2,
      "start": "Corpus Christi II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Wolfson",
      "club_end": "Hughes Hall",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Wolfson II",
      "number": 2,
      "start": "Wolfson II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "King's",
      "club_end": "Caius",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "King's II",
      "number": 2,
      "start": "King's II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Girton",
      "club_end": "1st and 3rd",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Girton II",
      "number": 2,
      "start": "Girton II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Hughes Hall",
      "club_end": "Wolfson",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Hughes Hall II",
      "number": 2,
      "start": "Hughes Hall II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Pembroke",
      "club_end": "Pembroke",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Pembroke III",
      "number": 3,
      "start": "Pembroke III",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "1st and 3rd",
      "club_end": "Girton",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "1st and 3rd III",
      "number": 3,
      "start": "1st and 3rd III",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Jesus",
      "club_end": "Churchill",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Jesus IV",
      "number": 4,
      "start": "Jesus IV",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Sidney Sussex",
      "club_end": "Sidney Sussex",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Sidney Sussex II",
      "number": 2,
      "start": "Sidney Sussex II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "St Catharine's",
      "club_end": "LMBC",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "St Catharine's III",
      "number": 3,
      "start": "St Catharine's III",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Magdalene",
      "club_end": "Jesus",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Magdalene III",
      "number": 3,
      "start": "Magdalene III",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Emmanuel",
      "club_end": "Lucy Cavendish",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Emmanuel IV",
      "number": 4,
      "start": "Emmanuel IV",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Churchill",
      "club_end": "Emmanuel",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Churchill III",
      "number": 3,
      "start": "Churchill III",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Lucy Cavendish",
      "club_end": "LMBC",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Lucy Cavendish II",
      "number": 2,
      "start": "Lucy Cavendish II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Clare",
      "club_end": "St Catharine's",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Clare III",
      "number": 3,
      "start": "Clare III",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "LMBC",
      "club_end": "Downing",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "LMBC V",
      "number": 5,
      "start": "LMBC V",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Darwin",
      "club_end": "Magdalene",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Darwin II",
      "number": 2,
      "start": "Darwin II",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Fitzwilliam",
      "club_end": "Darwin",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Fitzwilliam III",
      "number": 3,
      "start": "Fitzwilliam III",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "LMBC",
      "club_end": "Clare",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "LMBC IV",
      "number": 4,
      "start": "LMBC IV",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Downing",
      "club_end": "Selwyn",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Downing III",
      "number": 3,
      "start": "Downing III",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Selwyn",
      "club_end": "Jesus",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Selwyn III",
      "number": 3,
      "start": "Selwyn III",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Magdalene",
      "club_end": "Fitzwilliam",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Magdalene IV",
      "number": 4,
      "start": "Magdalene IV",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Peterhouse",
      "club_end": "Magdalene",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Peterhouse III",
      "number": 3,
      "start": "Peterhouse III",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Jesus",
      "club_end": "LMBC",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Jesus V",
      "number": 5,
      "start": "Jesus V",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "LMBC",
      "club_end": "Peterhouse",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "LMBC VI",
      "number": 6,
      "start": "LMBC VI",
      "withdrawn": false,
    },
    {
      "blades": false,
      "club": "Sidney Sussex",
      "club_end": "Sidney Sussex",
      "end": null,
      "gain": null,
      "highlight": false,
      "num_name": "Sidney Sussex III",
      "number": 3,
      "start": "Sidney Sussex III",
      "withdrawn": false,
    },
  ],
  "crews_withdrawn": 0,
  "days": 4,
  "distance": 2500,
  "div_size": [
    [
      17,
      17,
      17,
      17,
      9,
    ],
    [
      17,
      17,
      17,
      17,
      9,
    ],
    [
      17,
      17,
      17,
      17,
      9,
    ],
    [
      17,
      17,
      17,
      17,
      9,
    ],
  ],
  "flags": [],
  "full_set": false,
  "gender": "Men",
  "move": [],
  "pace": [],
  "results": [],
  "set": "May Bumps",
  "short": "Mays",
  "skip": [],
  "year": "2025",
}
`;
